text added. spacing fixed.

--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ main {
   border: 2px solid #117e29;
 }
 
+main p {
+  text-indent: 30px;
+}
+
 section {
   border: 2px dotted #b62029;
 }
@@ -32,37 +36,44 @@ footer {
   text-align: center;
   margin-bottom: 20px;
   height: 70px;
+  font-size: 13px;
+  color: #9f9fa1;
+  line-height: 16px;
 }
 
 h1, h2, h3, h4, h5 {
   margin: 10px 0;
+  font-family: 'Open Sans',sans-serif;
+  font-weight: bold;
 }
 
 h1 {
-  font-size: 28px;
+  font-size: 32px;
   margin-bottom: 20px;
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 28px;
   margin-top: 40px;
   margin-bottom: 15px;
+  font-weight: extra-bold;
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 24px;
 }
 
 h4 {
-  font-size: 16px;
+  font-size: 20px;
 }
 
 h5 {
-  font-size: 12px;
+  font-size: 16px;
 }
 
 p {
-  padding: 10px 10px 10px 0;
+  padding: 10px 10px 20px 0;
+  line-height: 20px;
 }
 
 img {
@@ -114,4 +125,8 @@ img {
 
 .author div:first-child {
   margin-right: 15px;
+}
+
+.author p {
+  text-indent: 0;
 }
